# project-generator

./: .env.development  .gitignore  README-zh.md  README.md  package.json  pyproject.toml  utils.py  vue.config.js
mock/: mock-server.js  table.js  user.js
project_generator/: errors.py  main.py  utils.py
project_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
project_generator/project_generator.egg-info/: PKG-INFO  SOURCES.txt
project_generator/templates/: demo.yaml  fastapi.yaml
public/: antv-x6-demo.html
src/: main.js  permission.js
src/api/: data-warehouse.js  table.js  user.js
src/components/DndList/: index.vue
src/router/: index.js
src/store/: getters.js  index.js
src/store/modules/: blocks.js  permission.js  user.js
src/styles/: index.scss  variables.scss
src/utils/: auth.js  chartTypeList.js  common.js  index.js  request.js  validate.js
src/views/: blank.vue
src/views/common/: table.vue
src/views/dashboard/: index.vue
src/views/dashboard/components/: TransactionTable.vue  (+1 more)
src/views/default-query/: sample-data copy.vue  sample-data.vue
src/views/dragdialog/: data-table.vue  drag-column-list.vue  drag-dialog-assembly.vue  drag-dialog.vue  quick-filter.vue  sort-column.vue
src/views/draglist/: dnd-list.vue
src/views/form/: index.vue
src/views/login/: index.vue
src/views/pharm-bi/: index.vue
src/views/quick-query/: index.vue
src/views/splitpane/: split-pane.vue
src/views/table/: index.vue
src/widgets/: DataTable.vue  ScatterPlot.vue  lineChart.vue
templates/: __init__.py  fastapi.yaml
(+33 files in other folders)
